--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>2.0.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
