--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -8,22 +8,15 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.heima</groupId>
-	<artifactId>cookie_session_jwt_demo</artifactId>
+	<artifactId>utils</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cookie_session_jwt_demo</name>
-	<description>cookie_session_jwt_demo</description>
+	<name>utils</name>
+	<description>utils</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
-
-		<!-- JWT依赖-->
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
-		</dependency>
 
 
 
@@ -40,4 +33,3 @@
 	</build>
 
 </project>
-
