--- a/redis_demo/src/main/resources/application.yml
+++ b/redis_demo/src/main/resources/application.yml
@@ -1,22 +1,12 @@
-server:
-  port: 8001
-
 spring:
-  profiles:
-    active: dev
-
   redis:
-    host: ${sky.redis.host}
-    port: ${sky.redis.port}
-    password: ${sky.redis.password}
-    database: ${sky.redis.database}
-
-logging:
-  level:
-    com:
-      sky:
-        mapper: debug
-        service: info
-        controller: info
-
+    host: 192.168.11.100
+    port: 6666
+    password:
+    lettuce:
+      pool:
+        max-active: 8  #最大连接
+        max-idle: 8   #最大空闲连接
+        min-idle: 0   #最小空闲连接
+        max-wait: 100ms #连接等待时间
 
