--- a/jedis-demo/pom.xml
+++ b/jedis-demo/pom.xml
@@ -8,37 +8,30 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.heima</groupId>
-	<artifactId>redis_demo</artifactId>
+	<artifactId>jedis-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>redis_demo</name>
-	<description>redis_demo</description>
+	<name>jedis-demo</name>
+	<description>jedis-demo</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
 
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
-		<!--common-pool-->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.7.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
+
+
 
 	</dependencies>
 
