--- a/mybatisplus_demo/pom.xml
+++ b/mybatisplus_demo/pom.xml
@@ -8,37 +8,36 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.heima</groupId>
-	<artifactId>redis_demo</artifactId>
+	<artifactId>mybatisplus_demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>redis_demo</name>
-	<description>redis_demo</description>
+	<name>mybatisplus_demo</name>
+	<description>mybatisplus_demo</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
 
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
-		<!--common-pool-->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.4.3</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.47</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.2.16</version>
 		</dependency>
+
+
+
 
 	</dependencies>
 
