--- a/redis_demo/src/main/resources/application.yml
+++ b/redis_demo/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   redis:
     host: 192.168.11.100
     port: 6666
-    password:
+    password: 123456
     lettuce:
       pool:
         max-active: 8  #最大连接
