--- a/redisson_demo/pom.xml
+++ b/redisson_demo/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.heima</groupId>
-	<artifactId>redis_demo</artifactId>
+	<artifactId>redisson_demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>redis_demo</name>
-	<description>redis_demo</description>
+	<name>redisson_demo</name>
+	<description>redisson_demo</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -20,25 +20,11 @@
 
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
-		<!--common-pool-->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.13.6</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 
 	</dependencies>
 
